# gtk-properties-macro

./: Cargo.toml  README.md
examples/: object.rs  simple.rs
src/: generate.rs  lib.rs  parse.rs
tests/expand/: documented.expanded.rs  documented.rs  explicit_flags.expanded.rs  explicit_flags.rs  implicit_flags.expanded.rs  implicit_flags.rs  object.expanded.rs  object.rs  simple.expanded.rs  simple.rs
